align fixes

--- a/site.css
+++ b/site.css
@@ -1,6 +1,6 @@
 
 .cardText{
-  min-height:230px;
+  min-height:260px;
   font-size: 120px;
   padding: 40px;
 }
